tests/rosetta/transpiler/FS/eban-numbers.error
compile: exit status 1
F# Compiler for F# 4.0 (Open Source Edition)
Freely distributed under the Apache 2.0 Open Source License

/workspace/mochi/tests/rosetta/transpiler/FS/eban-numbers.fs(3,1): warning FS0221: The declarations in this file will be placed in an implicit module 'Eban-numbers' based on the file name 'eban-numbers.fs'. However this is not a valid F# identifier, so the contents will not be accessible from other files. Consider renaming the file or adding a 'module' or 'namespace' declaration at the top of the file.

/workspace/mochi/tests/rosetta/transpiler/FS/eban-numbers.fs(78,35): error FS0001: The type 'obj' does not support a conversion to the type 'int'

/workspace/mochi/tests/rosetta/transpiler/FS/eban-numbers.fs(79,34): error FS0001: The type 'obj' does not support a conversion to the type 'int'
